# dota-lc-cli

./: .gitignore  README.md  RELEASE.md  abilities_russian.json  abilities_russian.txt  abilities_russian2.txt  abilities_russian_pbc.txt  changeui.py  clilogic.py  dlctypes.py  hero.json  herolist.json  keyparser.py  keyparser2.py  locale.ui  main.py  misc.py  package.json  parser.py  pyproject.toml  requirements.txt
data/: abilities_russian.txt
dota_localization_changer/: compiler_config.json  config.py  dlctypes.py  dotatypes.py  kvparser2.py  main.py  misc.py  preset.py  presets.py
dota_localization_changer/data/: config.json  hero_tags.json  items_tags.json  tags.json
json/: config.json  default_hero.json  user_hero.json
res/: hero.json
src/: dlctypes.py  main.py
ui/: app.py  index.ui
ui-nwjs/: index.html  package.json
user/: default_keys.pickle  settings.json  user_keys.json
