[project]
name = "dota-localization-changer"
version = "1.0.0"
description = ""
authors = [
    {name = "r41ngee",email = "r41ngeee@gmail.com"}
]
readme = "./docs/README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
