[project]
name = "dota-localization-changer"
version = "1.0.0"
description = ""
authors = [
    {name = "r41ngee",email = "r41ngeee@gmail.com"}
]
readme = "./docs/README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "art (>=6.4,<7.0)",
    "rich (>=14.0.0,<15.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
auto-py-to-exe = "^2.46.0"
pyinstaller = "^6.12.0"
isort = "^6.0.1"

