[project]
name = "dota-localization-changer"
version = "2.0.1"
description = ""
authors = [
    {name = "r41ngee",email = "r41ngeee@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "art (>=6.4,<7.0)",
    "tabulate (>=0.9.0,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
auto-py-to-exe = "^2.46.0"
pyinstaller = "^6.12.0"
isort = "^6.0.1"

